Introduce PathTypeExpression